WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208805
Log error in clearNowPlayingInfo/setNowPlayingInfo
https://bugs.webkit.org/show_bug.cgi?id=208805
Summary
Log error in clearNowPlayingInfo/setNowPlayingInfo
youenn fablet
Reported
2020-03-09 05:19:23 PDT
Log error in clearNowPlayingInfo/setNowPlayingInfo
Attachments
Patch
(1.98 KB, patch)
2020-03-09 05:20 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-03-09 05:20:46 PDT
Created
attachment 393023
[details]
Patch
WebKit Commit Bot
Comment 2
2020-03-09 07:52:33 PDT
Comment on
attachment 393023
[details]
Patch Clearing flags on attachment: 393023 Committed
r258139
: <
https://trac.webkit.org/changeset/258139
>
WebKit Commit Bot
Comment 3
2020-03-09 07:52:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-03-09 07:53:15 PDT
<
rdar://problem/60223160
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug