Log error in clearNowPlayingInfo/setNowPlayingInfo https://bugs.webkit.org/show_bug.cgi?id=208805

Reviewed by Eric Carlson.

No change of behavior.

* platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(MediaSessionManagerCocoa::clearNowPlayingInfo):
(MediaSessionManagerCocoa::setNowPlayingInfo):


Canonical link: https://commits.webkit.org/221743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258139 268f45cc-cd09-0410-ab3c-d52691b4dbfc